# spine-db

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spine_db/: __init__.py  app.py  cli.py  extractor.py  indexer.py  schema.py  setup.py  version.py
